<resources>
    <string name="app_name">SpanRunTracker</string>
    <string name="action_settings">Settings</string>
    <string name="circles_cnt_hint">Количество кругов</string>
    <string name="work_distance_hint">Длина рабочего отрезка</string>
    <string name="rest_distance_hint">Длина спокойного отрезка</string>
    <string name="input_header">Today\'s training</string>
    <string name="report_header">Training report</string>
    <string name="pace_table_header">Average pace</string>
    <string name="pace_200">200</string>
    <string name="pace_400">400</string>
    <string name="pace_1000">1000</string>
    <string name="multiply">X</string>
    <string name="divide">/</string>
    <string name="start">Start</string>
    <string name="work">Work</string>
    <string name="rest">Rest</string>
    <string name="circle_timer_label">Circle time</string>
    <string name="run_timer_label">Training time</string>
    <string name="time_zero">00:00.00</string>
    <string name="title_activity_report">ReportActivity</string>
</resources>
