<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.arkebuzer.konstantin.spanruntracker.ReportActivity"
    tools:showIn="@layout/activity_report">

    <TextView
        android:id="@+id/report_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/report_header"
        android:textSize="38sp" />

    <TextView
        android:id="@+id/pace_table_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="50dp"
        android:text="@string/pace_table_header"
        android:textSize="38sp" />

    <TableLayout
        android:id="@+id/pace_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pace_table_header"
        android:layout_centerVertical="true"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:text="@string/pace_200"
                android:textSize="36sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="1"
                android:text="@string/pace_400"
                android:textSize="36sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_weight="1"
                android:text="@string/pace_1000"
                android:textSize="36sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/work"
                android:textSize="36sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/rest"
                android:textSize="36sp" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
